# eunoform_companion

./: .gitignore  README.md  README_PHASE2_UPDATE.diff  ai_model_selection.md  package-lock.json  package.json
code/: .gitignore  PHASE1_README.md  PHASE2_README.md  README_UPDATE.diff  pyproject.toml
code/apps/body-simulator/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
code/apps/body-simulator/src/: animation.test.ts  animation.ts  api.test.ts  api.ts  behaviors.test.ts  behaviors.ts  controller.ts  main.ts  preferences.ts  styles.css  types.ts  view.ts
code/apps/companion-service/app/: main.py  settings.py
code/apps/companion-service/app/api/: router.py  schemas.py
code/apps/companion-service/app/domain/: clock.py  interaction_state.py  models.py
code/apps/companion-service/app/persistence/: database.py  repositories.py
code/apps/companion-service/app/policy/: humane_policy_engine.py  policy_models.py
code/apps/companion-service/app/services/: background_scheduler.py  companion_application_service.py  explanation_service.py  focus_session_service.py
code/tests/api/: test_api.py
code/tests/behavior/: test_humane_interactions.py  test_persistence_restart.py
code/tests/unit/: test_focus_session_service.py  test_policy_engine.py  test_state_machine.py
docs/: 00_Vision_Statement.md  01_Humane_AI_Manifesto.md  02_Personality_And_Behavior_Guide.md  03_00_Technical_Architecture_Plan.md  03_01_Technical_Architecture_Expanded.md  04_MVP_Specification.md  05_Phase_1_Implementation_Notes.md  (+3 more)
(+1 files in other folders)
