[project]
name = "eunoform-companion"
version = "0.4.0"
description = "Humane, deterministic local companion service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128,<1",
  "pydantic>=2.13,<3",
  "uvicorn>=0.48,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
  "ruff>=0.12,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
pythonpath = ["apps/companion-service"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
